Fix Supabase Authentication and Netlify CLI Errors

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "netlify dev",
+    "dev": "netlify dev --edge-functions=false",
     "dev:vite": "vite",
     "build": "vite build",
     "lint": "eslint .",
