--- a/package.json
+++ b/package.json
@@ -8,14 +8,7 @@
     "dev:vite": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "db:setup": "echo 'Database setup - will implement with Supabase'",
-    "db:seed": "echo 'Database seeding - will implement with sample data'",
-    "functions": "echo 'Netlify functions - will implement serverless functions'",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.3",
@@ -30,27 +23,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.0.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^1.6.1",
-    "@vitest/ui": "^1.6.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "jsdom": "^24.1.3",
     "netlify-cli": "^17.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "vitest": "^1.6.1"
+    "vite": "^5.4.2"
   }
 }
