--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "netlify:deploy:prod": "npx netlify deploy --prod"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.17.1",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.0",
     "lucide-react": "^0.307.0",
