--- a/netlify.toml
+++ b/netlify.toml
@@ -30,7 +30,7 @@
 
 [functions]
   node_bundler = "esbuild"
-  external_node_modules = ["@supabase/supabase-js"]
+  external_node_modules = ["@supabase/supabase-js", "@anthropic-ai/sdk"]
   # Explicitly specify this is for regular functions only
   directory = "netlify/functions"
 
